--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,7 @@ environment:
 build_script:
   - git config --global user.name "Smile-DK"
   - git config --global user.email "2236141431@qq.com"
+  - git checkout master
   - git clone https://github.com/purerosefallen/ygopro-222DIY
   - cd ygopro-222DIY
 
