--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,16 +7,19 @@ environment:
 build_script:
   - git config --global user.name "Smile-DK"
   - git config --global user.email "2236141431@qq.com"
+  - git checkout master
   - git clone https://github.com/purerosefallen/ygopro-222DIY
   - cd ygopro-222DIY
 
   - cp -rf ../expansions/script expansions
 
   - git add . -A
-  - git commit -m "Auto Push by Miyuki"
+  - git commit -m "Auto Push by Nanahira"
 
   - git checkout data
+  - cp -rf ../expansions/pics expansions
   - cp -rf ../expansions/script expansions
+  - cp -rf ../sound .
   - cd update
   - update.exe -ci
   - cd ..
