--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,22 +8,16 @@ build_script:
   - git config --global user.name "Smile-DK"
   - git config --global user.email "2236141431@qq.com"
   - git checkout master
-  - git clone https://github.com/purerosefallen/ygopro-222DIY
+  - git clone --branch=data --depth=1 https://github.com/purerosefallen/ygopro-222DIY
   - cd ygopro-222DIY
 
-  - cp -rf ../expansions/script expansions
-
-  - git add . -A
-  - git commit -m "Auto Push by Miyuki"
-
-  - git checkout data
   - cp -rf ../expansions/pics expansions
   - cp -rf ../expansions/script expansions
   - cp -rf ../sound .
 
   - git add . -A
   - git commit -m "Auto Push by Miyuki"
-  - git push https://%AUTH_TOKEN%@github.com/purerosefallen/ygopro-222DIY master data
+  - git push https://%AUTH_TOKEN%@github.com/purerosefallen/ygopro-222DIY data
   - cd ..
 
 test: off
