--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,11 +5,11 @@ environment:
     secure: EQ9miMjfX/QAoBvgc6D+JLmHatLyxOEKZ/uo68QijxWW5Gp4MzB/pOH9+u2GlDVO
 
 build_script:
-  - git config --global user.name "Smile-DK"
-  - git config --global user.email "2236141431@qq.com"
+  - git config --global user.name "purerosefallen"
+  - git config --global user.email "78877@qq.com"
   - git checkout master
-  - git clone --branch=data --depth=1 https://github.com/purerosefallen/ygopro-222DIY
-  - cd ygopro-222DIY
+  - git clone --branch=data --depth=1 https://github.com/purerosefallen/ygopro-222DIY-data
+  - cd ygopro-222DIY-data
 
   - cp -rf ../expansions/pics expansions
   - cp -rf ../expansions/script expansions
@@ -17,7 +17,7 @@ build_script:
 
   - git add . -A
   - git commit -m "Auto Push by Miyuki"
-  - git push https://%AUTH_TOKEN%@github.com/purerosefallen/ygopro-222DIY data
+  - git push https://%AUTH_TOKEN%@github.com/purerosefallen/ygopro-222DIY-data master
   - cd ..
 
 test: off
