--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,7 @@ build_script:
   - git config --global user.name "purerosefallen"
   - git config --global user.email "78877@qq.com"
   - git checkout master
-  - git clone --branch=data --depth=1 https://github.com/purerosefallen/ygopro-222DIY-data
+  - git clone --depth=1 https://github.com/purerosefallen/ygopro-222DIY-data
   - cd ygopro-222DIY-data
 
   - cp -rf ../expansions/pics expansions
