--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ before_install:
 - mkdir replay
 
 script:
-- echo "select id from datas;" | sqlite3 ./expansions/7cgl.cdb | xargs -I {} ./ygopro {} 2>&1 | tee ../redtext.txt
+- echo "select id from datas;" | sqlite3 ./expansions/mcg.cdb | xargs -I {} ./ygopro {} 2>&1 | tee ../redtext.txt
 - cd ..
 
 - exit $(cat ./redtext.txt | wc -l)
